# pie

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmark/: README.md  benchmark_results.tsv  concordance_metrics.json  prepare_snpgenie_input.py  recompute_concordance.py  run_benchmark.sbatch  run_benchmark.sh  split_by_chrom.sh
data/: README.md
docs/plans/: 2026-02-25-pie-design.md  2026-02-25-pie-implementation.md  2026-02-27-individual-mode-design.md  2026-02-27-individual-mode-plan.md  2026-03-04-plot-improvements-design.md  2026-03-04-plot-improvements.md
src/pie/: __init__.py  annotation.py  cli.py  codon.py  diversity.py  io.py  parallel.py  plot.py  reference.py  vcf.py
tests/: conftest.py  create_test_data.py  helpers.py  test_annotation.py  test_cli.py  test_codon.py  test_diversity.py  test_integration.py  test_io.py  test_parallel.py  test_plot.py  test_reference.py  test_regression.py  test_robustness.py  test_vcf.py
tests/data/: genes.gff3  genes.gtf  ref.fa  ref.fa.fai  variants.vcf  variants.vcf.gz.tbi
