[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pie"
version = "0.0.1b1"
description = "piN/piS Estimator for pool-seq data"
requires-python = ">=3.12"
dependencies = [
    "cyvcf2",
    "gffutils",
    "pysam",
    "numpy",
    "pandas",
    "plotnine",
    "click",
]

[project.scripts]
pie = "pie.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: regression tests using real dataset (~12s)"]
